# BrowserOS

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  DEV.md  LICENSE.ungoogled_chromium  README.md  manifest.json  package-lock.json  package.json  requirements.txt  webpack.config.js
.github/ISSUE_TEMPLATE/: 01-bug.yml  feature_request.md
.github/workflows/: top-issues.yml  update-agent-submodule.yml
agent/: README.md  manifest.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
agent/docs/: todo-tool-design.md
agent/src/: config.ts
chromium_patches/chrome/utility/: BUILD.gn
chromium_patches/chrome/utility/importer/: chrome_importer.cc  chrome_importer.h  external_process_importer_bridge.cc  external_process_importer_bridge.h  importer_creator.cc
docs/: 4-react-agent-loop.md  CNAME  appcast-x86_64.xml  appcast.xml  docs.json  evals2-implementation.md  todo-tool-design.md  update.mdx
docs/bring-your-own-keys/: claude.mdx  gemini.mdx  openai.mdx  openrouter.mdx
docs/browseros-mcp/: how-to-guide.mdx
docs/features/: bring-your-own-llm.mdx  llm-chat-hub.mdx  scheduled-tasks.mdx  use-with-claude-code.mdx
docs/integrations/: n8n.mdx
docs/local-LLMs/: lm-studio.mdx  ollama.mdx
patches/: series
patches/nxtscape/: embed-third-party-llm-in-side-panel.patch  extensions-OTA-updater.patch  importer-updates.patch  nxtscape-settings-ui.patch  pin-browseros-extensions.patch  pin-nxtscape-agents-together.patch
scripts/: create_dmg.sh  sign_and_package_app.sh
src/: config.ts
src/background/: index.ts
(+281 files in other folders)
